[package]
name = "blogen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["cargo"] }
env_logger = "0.9.0"
fs_extra = "1.2.0"
handlebars = "4.3.3"
log = "0.4.17"
manifest-dir-macros = "0.1.16"
once_cell = "1.13.1"
pulldown-cmark = "0.9.2"
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.32"
