[package]
name = "blogen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0.62", features = ["backtrace"] }
atom_syndication = "0.11.0"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.17", features = ["cargo"] }
either = { version = "1.8.0", features = ["serde"] }
env_logger = "0.9.0"
fs_extra = "1.2.0"
handlebars = "4.3.3"
log = "0.4.17"
maud = "0.24.0"
once_cell = "1.13.1"
pulldown-cmark = "0.9.2"
regex = "1.6.0"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.85"
thiserror = "1.0.32"
webpage = { version = "1.4.0", features = ["serde"] }
zstd = "0.11.2"
