[package]
name = "blogen"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
atom_syndication = "0.12.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["cargo", "wrap_help"] }
env_logger = "0.11"
fs_extra = "1.3"
handlebars = "6.2"
log = "0.4"
maud = "0.26"
pulldown-cmark = "0.12"
regex = "1.11"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
webpage = { version = "2.0", features = ["serde"] }
zstd = "0.13"
